tests/error/tracing_errors/linear_drop1.err
Error: Error in comptime function return (at $FILE:10:0)
   | 
 8 | 
 9 | @guppy.comptime(module)
10 | def test() -> None:
   | ^^^^^^^^^^^^^^^^^^^
11 |     q = qubit()
   | ^^^^^^^^^^^^^^^

Value with non-droppable type `qubit` is leaked by this function

Guppy compilation failed due to 1 previous error
